@@ -26,9 +26,11 @@ $color              = $this->params->get('templatecolor');
 $logo               = $this->params->get('logo');
 $navposition        = $this->params->get('navposition');
 $app                = JFactory::getApplication();
+$doc				= JFactory::getDocument();
 $templateparams     = $app->getTemplate(true)->params;
-?>
 
+$doc->addScript($this->baseurl.'/templates/beez_20/javascript/md_stylechanger.js', 'text/javascript', true);
+?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->language; ?>" lang="<?php echo $this->language; ?>" dir="<?php echo $this->direction; ?>" >
         <head>
@@ -36,7 +38,7 @@ $templateparams     = $app->getTemplate(true)->params;
                 <link rel="stylesheet" href="<?php echo $this->baseurl ?>/templates/system/css/system.css" type="text/css" />
                 <link rel="stylesheet" href="<?php echo $this->baseurl ?>/templates/beez_20/css/position.css" type="text/css" media="screen,projection" />
                 <link rel="stylesheet" href="<?php echo $this->baseurl ?>/templates/beez_20/css/layout.css" type="text/css" media="screen,projection" />
-                <link rel="stylesheet" href="<?php echo $this->baseurl ?>/templates/beez_20/css/print.css" type="text/css" media="Print" />
+                <link rel="stylesheet" href="<?php echo $this->baseurl ?>/templates/beez_20/css/print.css" type="text/css" media="print" />
 <?php
         $files = JHtml::_('stylesheet','templates/beez_20/css/general.css',null,false,true);
         if ($files):
@@ -83,7 +85,6 @@ $templateparams     = $app->getTemplate(true)->params;
                 <!--[if IE 7]>
                         <link href="<?php echo $this->baseurl ?>/templates/beez_20/css/ie7only.css" rel="stylesheet" type="text/css" />
                 <![endif]-->
-                <script type="text/javascript" src="<?php echo $this->baseurl ?>/templates/beez_20/javascript/md_stylechanger.js"></script>
                 <script type="text/javascript" src="<?php echo $this->baseurl ?>/templates/beez_20/javascript/hide.js"></script>
 
                 <script type="text/javascript">
