@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 03-Mar-2011 Mark Dexter
  # [#25006] Alternative Layout Not Implemented in com_search, com_users
+ # [#24821] Add support for defer/async to JDocument
 
 01-Mar-2011 Ian MacLennan
  # [#25038] Codemirror update causes improper characters in template html/css editing
